third_party/move/move-compiler/tests/move_check/typing/constant_allowed_but_not_supported.exp
error[E03009]: unbound variable
  ┌─ tests/move_check/typing/constant_allowed_but_not_supported.move:7:9
  │
7 │         move X;
  │         ^^^^^^ Invalid move. Unbound variable 'X'

error[E03009]: unbound variable
  ┌─ tests/move_check/typing/constant_allowed_but_not_supported.move:8:9
  │
8 │         copy Y;
  │         ^^^^^^ Invalid copy. Unbound variable 'Y'

error[E04013]: invalid statement or expression in constant
  ┌─ tests/move_check/typing/constant_allowed_but_not_supported.move:9:9
  │
9 │         Z;
  │         ^ Other constants are not supported in constants

